# linformer

./: Dockerfile  LICENSE  README.md  pyproject.toml  understanding.ipynb
linformer/: attention.py  entrypoint.py
